corrected minor typos

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -617,8 +617,9 @@ So that
 \fst \approx \frac{ \mu T}{\mu T +  4N_e\mu }  %= \frac{ T}{ T +  4N_e }
 \end{equation}
 note that $\mu$ cancels out of this. In this simple toy model $\fst$
-is increasing because the amount of between population diversity is
-increases (initially linearly with $T$) and does so at a rate
+is increasing because the amount of between population diversity 
+increases with the divergence time of the two populations (initially
+linearly with $T$). It does so at a rate
 give by $T/(4N_e)$ so that differentiation will be higher
 between populations seperated by long divergence times or with small
 effective population sizes.
