Started continuing implementing comments (chapter 2).

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -838,15 +838,15 @@ learning about the major (orthogonal) axes of the kinship matrix.
 
 \newpage
 
-\section{Correlations between loci, linkage disequilibrium, and recombination.}
+\section{Correlations between loci, linkage disequilibrium, and recombination}
 
 %</source-file>
 
-Up to now we've been interested in correlations between alleles at the
+Up to now \sa{we have} been interested in correlations between alleles at the
 same locus, e.g. correlations within individuals (inbreeding) or between
-individuals (relatedness). We turn our attention now to think about
-correlations between alleles at different loci. To start to understand
-correlations between loci we need to first understand a bit about recombination.\\
+individuals (relatedness). \sa{We have seen how relatedness between parents affects the extent to which their offspring is inbred.} We \sa{now} turn \sa{\sout{our attention}} to \sa{\sout{think about}}
+correlations between alleles at different loci. To \sa{\sout{start to}} understand
+correlations between loci we need to \sa{\sout{first}} understand \sa{\sout{a bit about}} recombination.\\
 
 
 \paragraph{Recombination}  Lets
