--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -302,7 +302,7 @@ sampled at random from some broader population).\\
 
 We can also interpret $F$-statistics as proportions of variance explained by
 different levels of population structure. To see this, let us think about $\fst$ averaged over $K$
-subpopulations, whose frequencies are $p_1,\sa{\dots},p_K$. The
+subpopulations, whose frequencies are $p_1,\dots,p_K$. The
 frequency in the total population is $p_T=\bar{p} = 1/K \sum_{i=1}^K p_i$.
 Then, we can
 write
