Minor editorial change (corrected a typo) for testing purposes.

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -391,7 +391,7 @@ H_{t+1} =H_0 \exp \left(-\frac{t}{2N} \right)
 i.e. heterozygosity decays exponentially at a rate $1/(2N)$.
 
 \subsection{Levels of diversity maintained by a balance between
- mutation and drift. }
+ mutation and drift}
 
 Looking backwards in time from one generation to the next, we are going
 to say that two alleles which have the same parental allele (i.e. find
